apply role, refacter job candidate
