# src/controllers/job.controller.ts
@@ -1,23 +1,13 @@
 import { Get, Route, Tags, Post, Body, Query, Security, Patch, Delete } from 'tsoa';
 import { IJob } from '../schema/job.schema';
 import * as jobService from '../services/job.service';
-import * as jobCandidateService from '../services/jobCanidate.service';
-import * as candidateService from '../services/candidate.service';
-import { AssignJobRequest, BaseJobRequest } from '../inputs/job.input';
+import { BaseJobRequest } from '../inputs/job.input';
 import { Constants } from '../configs/constant';
-import { HttpError } from '../utils/httpError';
-import { JobCandidateStatusEnum } from '../configs/enum';
 
 @Route('jobs')
 @Tags('Jobs')
 @Security(Constants.SecurityMethod.JWT)
 export class JobController {
-
-  @Get('{jobId}/stats')
-  public async getAllJobs(@Query() jobId: string): Promise<{ jobId: string, count: number}> {
-    const activeCounts =  await jobCandidateService.getAllActiveCandidates(jobId);
-    return {jobId, count: activeCounts};
-  }
 
   @Get('{jobId}')
   public async getJobById(@Query() jobId: string): Promise<IJob | null> {
@@ -32,20 +22,6 @@ export class JobController {
     @Query() maxSalary?: number
   ): Promise<IJob[]> {
     return await jobService.searchJob(q, location, minSalary, maxSalary);
-  }
-
-  @Post('/{jobId}/assign')
-  public async assignJobAndCandidate(@Query() jobId: string, @Body() input: AssignJobRequest): Promise<boolean> {
-    const job = await jobService.getJobById(jobId);
-    if (!job) {
-      throw new HttpError(Constants.HttpStatus.NOT_FOUND, 'Job not found');
-    }
-    const candidate = await candidateService.getCandidateById(input.candidateId);
-    if (!candidate) {
-      throw new HttpError(Constants.HttpStatus.NOT_FOUND, 'Candidate not found');
-    }
-    await jobCandidateService.assingCandidateAndJob(jobId, input.candidateId, JobCandidateStatusEnum.Applied);
-    return true;
   }
 
   @Post('/')
